--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   },
   "dependencies": {
     "@ark-ui/react": "^4.2.0",
+    "@types/luxon": "^3.4.2",
     "hugeicons-react": "^0.3.0",
+    "luxon": "^3.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
