✨ Add shopping list grid to main page & Update shopping list modal to support creation

--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   },
   "dependencies": {
     "@ark-ui/react": "^4.2.0",
-    "@types/luxon": "^3.4.2",
+    "date-fns": "^4.1.0",
+    "houseform": "^1.13.0",
     "hugeicons-react": "^0.3.0",
-    "luxon": "^3.5.0",
+    "i18next": "^23.16.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.27.0"
+    "react-router-dom": "^6.27.0",
+    "zod": "^3.23.8",
+    "zod-i18n-map": "^2.27.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
