--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
+    "remeda": "^2.17.3",
     "zod": "^3.23.8",
     "zod-i18n-map": "^2.27.0"
   },
