--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "i18next": "^23.16.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-infinite-scroll-hook": "^5.0.1",
     "react-router-dom": "^6.27.0",
     "remeda": "^2.17.3",
     "swr": "^2.2.5",
