--- a/.github/workflows/workflow.deploy-to-pages.yaml
+++ b/.github/workflows/workflow.deploy-to-pages.yaml
@@ -2,9 +2,9 @@ name: Deploy to pages
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - main
+#  push:
+#    branches:
+#      - main
 
 permissions:
   contents: read
