✨ Add application localization

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "prepare": "panda codegen",
+    "i18-interface": "i18next-resources-for-ts interface -i ./public/locales/cs -o ./src/@types/i18-resources.d.ts",
     "dev": "bunx --bun vite",
     "build": "bunx --bun vite build",
     "preview": "bunx --bun vite preview",
@@ -17,9 +18,11 @@
     "date-fns": "^4.1.0",
     "houseform": "^1.13.0",
     "hugeicons-react": "^0.3.0",
-    "i18next": "^23.16.5",
+    "i18next": "^24.2.0",
+    "i18next-http-backend": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.2.0",
     "react-infinite-scroll-hook": "^5.0.1",
     "react-router-dom": "^6.27.0",
     "remeda": "^2.17.3",
@@ -39,6 +42,7 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "i18next-resources-for-ts": "^1.5.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
     "vite": "^5.4.10",
